// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariationViewer component renders on data 1`] = `
<DocumentFragment>
  <section
    class="wider-tab-content hotjar-margin"
  >
    <button
      class="button tertiary"
      type="button"
    >
      <test-file-stub />
      Download
    </button>
    <nightingale-manager
      reflected-attributes="highlight,display-start,display-end,activefilters,filters,selectedid"
      style="display: block; line-height: 0;"
    />
    <table
      class="table"
    >
      <thead
        class=""
      >
        <tr
          class="row"
        >
          <th>
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown"
            >
              <button
                class="button tertiary"
                type="button"
              >
                ±
              </button>
            </div>
          </th>
          <th>
            Variant
            <br />
            ID(s)
          </th>
          <th>
            Position(s)
          </th>
          <th>
            Change
          </th>
          <th>
            Description
          </th>
          <th>
            Clinical
            <br />
            significance
          </th>
          <th>
            Provenance
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="row has-extra-content"
        >
          <td>
            <button
              aria-controls="1"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td>
            <span
              class=""
            >
              rs1309716217
            </span>
          </td>
          <td>
            1
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR3 E1*"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                E&gt;*
              </a>
            </span>
          </td>
          <td />
          <td />
          <td>
            <span
              class=""
            >
              gnomAD
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content"
          hidden=""
          id="1"
        >
          <td />
        </tr>
        <tr
          class="row odd has-extra-content"
        >
          <td>
            <button
              aria-controls="2"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td>
            <span
              class=""
            >
              rs1225901762
            </span>
          </td>
          <td>
            1
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR3 E1A"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                E&gt;A
              </a>
            </span>
          </td>
          <td />
          <td />
          <td>
            <span
              class=""
            >
              gnomAD
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content odd"
          hidden=""
          id="2"
        >
          <td />
        </tr>
        <tr
          class="row has-extra-content"
        >
          <td>
            <button
              aria-controls="3"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td>
            <span
              class=""
            >
              rs765605248
            </span>
          </td>
          <td>
            1
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR3 E1D"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                E&gt;D
              </a>
            </span>
          </td>
          <td />
          <td />
          <td>
            <span
              class=""
            >
              ExAC
            </span>
            <br />
            <span
              class=""
            >
              gnomAD
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content"
          hidden=""
          id="3"
        >
          <td />
        </tr>
        <tr
          class="row odd has-extra-content"
        >
          <td>
            <button
              aria-controls="4"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td>
            <span
              class=""
            >
              rs1428147916
            </span>
          </td>
          <td>
            2
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR3 I2T"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                I&gt;T
              </a>
            </span>
          </td>
          <td />
          <td />
          <td>
            <span
              class=""
            >
              TOPMed
            </span>
            <br />
            <span
              class=""
            >
              gnomAD
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content odd"
          hidden=""
          id="4"
        >
          <td />
        </tr>
        <tr
          class="row has-extra-content"
        >
          <td>
            <button
              aria-controls="5"
              aria-expanded="false"
              type="button"
            >
              +
            </button>
          </td>
          <td>
            <span
              class=""
            >
              rs750994808
            </span>
          </td>
          <td>
            2
          </td>
          <td>
            <span
              class="change"
            >
              <a
                class="external-link"
                href="https://www.ebi.ac.uk/ProtVar/query?search=P0DPR3 I2V"
                rel="noopener"
                target="_blank"
                title="View in ProtVar"
              >
                I&gt;V
              </a>
            </span>
          </td>
          <td />
          <td />
          <td>
            <span
              class=""
            >
              ExAC
            </span>
            <br />
            <span
              class=""
            >
              gnomAD
            </span>
          </td>
        </tr>
        <tr
          class="row extra-content"
          hidden=""
          id="5"
        >
          <td />
        </tr>
      </tbody>
    </table>
  </section>
</DocumentFragment>
`;

exports[`VariationViewer component renders on error 1`] = `
<DocumentFragment>
  <div
    class="wider-tab-content hotjar-margin"
  >
    <div
      class="container"
    >
      <img
        alt=""
        height="400"
        src="test-file-stub"
        width="400"
      />
      <div
        class="message message--failure"
        role="status"
      >
        <div
          class="message__side-border"
        />
        <test-file-stub
          classname="message--icon-align-top"
          height="1.125em"
          width="1.125em"
        />
        <div
          class="message__title"
        >
          <h4>
            This service is currently unavailable!
          </h4>
          <div>
            Please try again later
          </div>
          <small>
            We will reload this page for you in 5 seconds
          </small>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VariationViewer component renders on loading 1`] = `
<DocumentFragment>
  <div
    class="wider-tab-content hotjar-margin"
  >
    <div
      class="loader-container"
    >
      <test-file-stub
        classname="loader"
        height="100"
        width="100"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`VariationViewer component renders on no data 1`] = `
<DocumentFragment>
  <section
    class="wider-tab-content hotjar-margin"
  >
    <div
      class="no-data"
    >
      No variation information available for P05067
    </div>
  </section>
</DocumentFragment>
`;
